fix: diagnostics downloads showing offscreen

--- a/emhttp/plugins/dynamix/sheets/Diagnostics.css
+++ b/emhttp/plugins/dynamix/sheets/Diagnostics.css
@@ -22,8 +22,8 @@ pre#swaltext {
 @media (max-width: 960px) {
     .sweet-alert.nchan {
         height: 600px;
-        width: 900px;
-        margin-left: -470px;
+        width: 95vw;
+        max-width: 900px;
     }
 }
 @media (max-height: 768px) {
@@ -34,7 +34,7 @@ pre#swaltext {
 @media (max-height: 768px) {
     .sweet-alert.nchan {
         height: 600px;
-        width: 900px;
-        margin-left: -470px;
+        width: 95vw;
+        max-width: 900px;
     }
 }
